--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "cd client && npm run build",
+        "build": "npm run build",
         "install-client": "cd client && npm install",
-        "start": "node index.js",
-        "heroku-postbuild": "npm run install-client && npm run build"
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
